tests/rspack-test/normalCases/errors/duplicate-export/errors.js
module.exports = [
  /JavaScript parse error: Duplicate export of 'B'/,
  /JavaScript parse error: Duplicate export of 'A'/,
];
